added one more paragraph on index.html file on master branch from arvind_server

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hello There How are you</h1>
         <p> My name is Arvind Kumar </p>
+        <p>You are beutifull</p>
     </body>
 </html>
