--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Hello There How are you</h1>
         <p> My name is Arvind Kumar </p>
         <p>You are beutifull</p>
+        <h2>Heading 2.............</h2>
     </body>
 </html>
